Update background property and fix typos
Fix background property and correct spelling errors.

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
   color: red;
 }
 body {
-  background-color: #8bcfe8;
+  background: #8bcfe8;
 }
 .firstdiv{
   backround-image: url('https://www.astons.com/wp-content/uploads/2023/10/article_nas_ararat.webp');
