Update CSS styles for body and div elements
Fixed background color, added cursor style, and corrected text alignment. Also fixed typos in height properties and background image properties.

--- a/main.css
+++ b/main.css
@@ -8,13 +8,17 @@
   color: red;
 }
 body {
-  background: #8bcfe8;
+  cursor: move;
+  text-align: center;
+  background: blue;
+  text-spacing: 4px;
+  
 }
 .firstdiv{
   backround-image: url('https://www.astons.com/wp-content/uploads/2023/10/article_nas_ararat.webp');
   backround-attachment: fixed;
-  height ; 250px;
+  height: 250px;
 }
 .seconddiv{
-    height ; 1200px;
+  height: 1200px;
 }
